// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthService should return a token when user login 1`] = `
Object {
  "data": Object {
    "token": "123.123.123",
  },
  "errors": null,
}
`;

exports[`AuthService should return a user when a user register 1`] = `
Object {
  "data": Object {
    "email": "test@email.com",
    "name": "User",
    "password": "1234",
  },
  "errors": null,
}
`;
